--- a/contract-sdk/src/main/kotlin/com/r3/corda/lib/contracts/contractsdk/todo.txt
+++ b/contract-sdk/src/main/kotlin/com/r3/corda/lib/contracts/contractsdk/todo.txt
@@ -1,1 +1,3 @@
 1) multiple commands
+2) Allow configuration in which all the verifiers are always executed and a summary of what failed is produced
+3) Allow writing contracts that don't even need the interface Commands { ... } construct
